fix : 저장경로 변경, 출력 수정